# us_electronics

./: db.sqlite3  pyproject.toml  requirements.txt
core/: settings.py  urls.py
sensor/: admin.py  models.py  views.py
sensor/api/: serializers.py  urls.py  views.py
sensor/migrations/: 0001_initial.py  0002_alter_sensor_time_interval.py
static/: graph.css  graph_v1.js
templates/: sensor.html  sensor_v1.html  sensor_v2.html
